--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Food Diary</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Food Diary — Discover Delicious Recipes & World Cuisines</title>
+  <meta name="description"
+    content="Food Diary curates simple, delicious recipes, world cuisines, and practical kitchen tips to help you cook with confidence. Explore chef-inspired dishes today." />
+  <meta name="keywords" content="food diary, recipes, cooking, cuisines, kitchen tips, chefs, food blog" />
+  <meta name="theme-color" content="#FF6B35" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Food Diary — Discover Delicious Recipes" />
+  <meta property="og:description"
+    content="Chef-inspired recipes, world cuisines, and kitchen tips to elevate your home cooking." />
+  <meta property="og:type" content="website" />
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700;800&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
